WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
81051
Assertion failure in RenderView::computeRectForRepaint() (!repaintContainer || repaintContainer == this) at store.apple.com
https://bugs.webkit.org/show_bug.cgi?id=81051
Summary
Assertion failure in RenderView::computeRectForRepaint() (!repaintContainer |...
mitz
Reported
2012-03-13 16:09:36 PDT
Assertion failure in RenderView::computeRectForRepaint() (!repaintContainer || repaintContainer == this) at store.apple.com
Attachments
Handle an inline repaint containers correctly
(4.40 KB, patch)
2012-03-13 16:14 PDT
,
mitz
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2012-03-13 16:14:32 PDT
Created
attachment 131743
[details]
Handle an inline repaint containers correctly
mitz
Comment 2
2012-03-13 16:14:55 PDT
<
rdar://problem/11025225
>
mitz
Comment 3
2012-03-13 16:59:51 PDT
Fixed in <
http://trac.webkit.org/r110643
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug